# Reia

.github/workflows/: codeql.yml
godot/: project.godot
godot/client/: ClientMain.gd
godot/client/core/: SceneManager.gd  client_pipeline.gd
godot/client/features/network/systems/: s_client_entity_spawn.gd
godot/client/features/player/: client_player_interact.gd
godot/client/ui/components/atoms/: base_line_edit.gd  base_line_edit.gd.uid  body_text_label.gd  body_text_label.gd.uid  header_label.gd  header_label.gd.uid  primary_action_button.gd  primary_action_button.gd.uid  svg_icon.gd  svg_icon.gd.uid
godot/client/ui/components/molecules/: interaction_prompt.gd  interaction_prompt.gd.uid  player_health_bar.gd  player_health_bar.gd.uid
godot/client/ui/components/organisms/: chat_box.gd  chat_box.tscn
godot/client/ui/core/: ui_colors.gd
godot/client/ui/screens/hud/: main_hud.gd  main_hud.tscn
godot/core/: EntityMap.gd  GameOrchestrator.gd
godot/core/features/combat/: player_input.gd
godot/core/features/combat/systems/: s_server_combat_network.gd  s_server_death.gd  s_server_skill_execution.gd  s_server_skill_execution.gd.uid
godot/core/features/inventory/components/: c_interactable.gd
godot/core/features/network/: NetworkRouter.gd
godot/core/features/network/observers/: o_nameplate.gd
godot/core/features/network/systems/: s_client_auth_network.gd  (+3 more)
godot/server/: ServerMain.gd
godot/server/core/: server_pipeline.gd
rust/: Cargo.toml  build.bat
rust/src/ffi/: core_node.rs
rust/src/net/: client.rs  connection.rs  packets.rs  server.rs
(+13 files in other folders)
